@@ -3,8 +3,11 @@ require 'test/unit'
 
 class TestFlip < Test::Unit::TestCase
   def test_flip_flop
+    assert_equal [4,5], (1..9).select {|n| true if (n==4)..(n==5)}
+    assert_equal [4,5], (1..9).select {|n| true if (n==4)...(n==5)}
     assert_equal [2], (1..9).select {|n| true if (n==2)..(n%2).zero?}
     assert_equal [2,3,4], (1..9).select {|n| true if (n==2)...(n%2).zero?}
+    assert_equal [4,5,7,8], (1..9).select {|n| true if (n==4)...(n==5) or (n==7)...(n==8)}
   end
 
   def test_hidden_key
