@@ -1,3 +1,10 @@
+Sat Oct  1 19:19:34 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* compile.c (compile_flip_flop): simplify generated code.
+
+	* compile.c (compile_branch_condition): flip-flop can appear only
+	  in coditional expressions.
+
 Sat Oct  1 02:02:02 2016  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/win32.c (poll_child_status): rb_w32_wait_events_blocking() sets
